--- a/Villa-Suziriya/Web.config
+++ b/Villa-Suziriya/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Villa-Suziriya-20180227075756.mdf;Initial Catalog=aspnet-Villa-Suziriya-20180227075756;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Server=tcp:villa-suziriyadbserver.database.windows.net,1433;Initial Catalog=villaSuziriyaDb;Persist Security Info=False;User ID=elessar;Password=Nimana2311;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
@@ -21,6 +21,7 @@
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.6.1" />
+    <customErrors mode="Off"></customErrors>
     <httpRuntime targetFramework="4.6.1" />
     <httpModules>
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" />
@@ -33,6 +34,8 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
     <validation validateIntegratedModeConfiguration="false" />
+    <httpErrors errorMode="Detailed" />
+    <asp scriptErrorSentToBrowser="true"/>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
